--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,5 +1,11 @@
 {
-  "LogIn": "Войти",
+  "signIn": "Войти",
   "LogOut": "Выйти",
-  "register": "Зарегистрироваться"
+  "register": "Зарегистрироваться",
+  "signInDescription": "Войдите с помощью вашего Google аккаунта чтобы иметь возможность управлять Вашим аккаунтом с разных устройств",
+  "signInWithGoogle" : "Войти с помощью Google",
+  "or": "или",
+  "continueWithOutGoogle": "Продолжить без регистрации",
+  "languageNow": "Русский"
+
 }
