--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -1,5 +1,10 @@
 {
-  "LogIn": "Увійти",
+  "signIn": "Увійти",
   "LogOut": "Вийти",
-  "register": "Зареєструватися"
+  "register": "Зареєструватися",
+  "signInDescription": "Увійдіть за допомогою вашого Google аккаунту щоб мати можливість кеорувати Вашим обліковим записом з різних пристроїв",
+  "signInWithGoogle": "Увійти за допомогою Google",
+  "or": "або",
+  "continueWithOutGoogle": "Продовжити без реєстрації",
+  "languageNow": "Українська"
 }
