--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,9 +1,26 @@
 {
-  "signIn": "Sign in",
-  "LogOut": "Log out",
-  "signInDescription": "Sign in with your Google account to be able to manage your account from different devices",
-  "signInWithGoogle" : "Sign in with Google",
+  "login": "Login",
+  "register": "Register",
+  "logOut": "Log out",
+  "loginDescription": "Login with Google, Apple or Facebook to be able to manage your account from different devices",
+  "registerDescription": "Register to be able to manage your account from different devices",
+  "signInWithGoogle": "Sign in with Google",
+  "signInWithApple": "Sign in with Apple",
+  "signInWithFacebook": "Sign in with Facebook",
   "or": "or",
   "continueWithOutGoogle": "Continue without registration",
-  "languageNow": "English"
+  "languageNow": "English",
+  "doYouHaveAccount": "Do you have an account? ",
+  "dontHaveAccount": "Don`t have an account yet? ",
+  "registerNow": "Register now",
+  "email": "Email",
+  "password": "Password",
+  "name": "Name",
+  "repeatPassword": "Repeat password",
+  "validateEmailError": "The email address is badly formatted",
+  "emailAlreadyUsedError": "This email address is already used",
+  "validateNameError": "Name must have from 3 to 64 characters",
+  "validatePasswordError": "Password must have minimum 6 characters, at least 1 capital case and 1 number",
+  "validateRepeatPasswordError": "Passwords do not match",
+  "allFieldIsRequired" : "All fields is required"
 }
