--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -1,10 +1,25 @@
 {
-  "signIn": "Увійти",
-  "LogOut": "Вийти",
+  "login": "Авторизуйтеся",
+  "logOut": "Вийти",
   "register": "Зареєструватися",
-  "signInDescription": "Увійдіть за допомогою вашого Google аккаунту щоб мати можливість кеорувати Вашим обліковим записом з різних пристроїв",
+  "loginDescription": "Авторизуйтеся за допомогою Google, Apple чи Facebook  щоб мати можливість керувати Вашим обліковим записом з різних пристроїв",
+  "registerDescription": "Зареєструтейся щоб мати можливість керувати Вашим обліковим записом з різних пристроїв",
   "signInWithGoogle": "Увійти за допомогою Google",
+  "signInWithApple": "Увійти за допомогою Apple",
+  "signInWithFacebook": "Увійти за допомогоюFacebook",
   "or": "або",
   "continueWithOutGoogle": "Продовжити без реєстрації",
-  "languageNow": "Українська"
+  "languageNow": "Українська",
+  "doYouHaveAccount": "Вже маете аккаунт?",
+  "dontHaveAccount": "Досі не маєте аккаунту?",
+  "registerNow": "Зареєструватися зараз",
+  "email" : "Електронна скринька",
+  "password": "Пароль",
+  "name": "Ім'я",
+  "repeatPassword": "Повторіть пароль",
+  "validateEmailError": "Електронна скринька введена некоректно",
+  "validateNameError": "Ім'я повинно мати від 3 до 64 символів",
+  "validatePasswordError": "Пароль повинен мати як мінімум 6 символів, одну велику літеру та один спеціальний знак",
+  "validateRepeatPasswordError": "Паролі не співпадають",
+  "allFieldIsRequired" : "Усі поля обов'язкові для заповнення"
 }
